manifests/argo-workflows-integration/poc/rhoai/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
