manifests/argo-workflows-integration/poc/rhoai/controller-namespaced.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ds-pipeline-workflow-controller-dspa
  labels:
    app: ds-pipeline-workflow-controller-dspa
    component: data-science-pipelines
    dspa: dspa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ds-pipeline-workflow-controller-dspa
      component: data-science-pipelines
      dspa: dspa
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ds-pipeline-workflow-controller-dspa
        component: data-science-pipelines
        dspa: dspa
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      serviceAccountName: ds-pipeline-workflow-controller-dspa
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
      containers:
        - resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 120m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          name: ds-pipeline-workflow-controller
          command:
            - workflow-controller
          livenessProbe:
            httpGet:
              path: /healthz
              port: 6060
              scheme: HTTP
            initialDelaySeconds: 90
            timeoutSeconds: 30
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
            - containerPort: 6060
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            registry.redhat.io/rhoai/odh-data-science-pipelines-argo-workflowcontroller-rhel8@sha256:cdc696a523b135a6e702a431192a424b3448427bd98b16bdbc54938f3a375c90
          args:
            - '--configmap'
            - ds-pipeline-workflow-controller-dspa
            - '--executor-image'
            - >-
              registry.redhat.io/rhoai/odh-data-science-pipelines-argo-argoexec-rhel8@sha256:e6736ca502c845fe47efb665bb2c8f30aa74c2238018b423c9214ab16ece3b12
            - '--namespaced'
      serviceAccount: ds-pipeline-workflow-controller-dspa
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
